--- a/Atm-index.html
+++ b/Atm-index.html
@@ -31,6 +31,6 @@
       src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
       crossorigin
     ></script>
-    <script src=""./Atm Project.jsx" defer type"text/babel"></script>
+    <script src=""./Atm Project.jsx" type"text"></script>
   </body>
 </html>
