--- a/Atm-index.html
+++ b/Atm-index.html
@@ -31,6 +31,6 @@
       src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
       crossorigin
     ></script>
-    <script type="text/jsx" src="./Atm-project.jsx" ></script>
+    <script src="./Atm-project.jsx" defer="text/babel" ></script>
   </body>
 </html>
