fixed bugs. Added styling and removed bootstrap link.
Fixed all the bugs causing compiling errors. Made React more stable.

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,18 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="styles.css"/>
     <script
       src="https://unpkg.com/@babel/standalone/babel.min.js"
       crossorigin
     ></script>
 
-    <title>Onclick Anything</title>
+    <title>ATM Sandbox</title>
   </head>
 
   <body>
     <!-- You will put your React component inside this div. -->
-    <div id="root"></div>
+    <div id="root"></div> 
 
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
@@ -29,6 +24,6 @@
       src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
       crossorigin
     ></script>
-    <script src="./src/Atm.jsx" defer="text/babel" ></script>
+    <script src="./src/index.js" defer="text/babel" ></script>
   </body>
 </html>
